# CRAFT

./: .gitignore  Cargo.toml  LICENSE  README.md  craft.conf.example  log4rs.yaml
doc/: crafted.yaml
importers/: README.md  common.py  eu-dgt-translation-memory.py  europarl.py  europeana.py  gutenberg.py  wikipedia.py
importers/French/: codecivil.py
src/: article_iterator.rs  articles.rs  codecivil.rs  common.rs  dgt.rs  europeana.rs  input_source.rs  lib.rs  main.rs  pandoc_executor.rs  pandoc_filter.rs  text2plain.rs  textfilter.rs
src/gutenberg/: mod.rs
src/modules/: codecivil.rs  dgt.rs  europeana.rs  gutenberg.rs  mod.rs  wikipedia.rs
src/modules/w/: preprocessor.rs
src/wikipedia/: articles.rs  mod.rs  preprocessor.rs
tests/: README.test_pandoc_filter  mk_pandoc_ast_tests.py  mktest.py  test_gutenberg.rs  test_pandoc_executor.rs  test_pandoc_filter.rs  test_text2plain.rs  test_textfilter.rs  test_wikipedia.rs
