[package]
name = "craft"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda@gmx.de>"]

[lib]
name = "craft"
path = "src/lib.rs"

[[bin]]
name = "crafted"
path = "src/main.rs"

[dependencies]
# for europarl
flate2 = "*"
tar = "*"
# for wikipedia
bzip2 = "*"
xml-rs = "0.3"
# for pandoc
tempdir = "*"
pandoc = { git = "https://github.com/oli-obk/rust-pandoc" }
json = "*"
# for the main program
getopts = "0.2"
log = "0.3.6"
log4rs = "0.5.1"
